# universal-vstock

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  driver.vrdrivermanifest
VirtualGunstockUI/: CMakeLists.txt
VirtualGunstockUI/src/: IPCUtils.cpp
driver/: CMakeLists.txt  VirtualDevice.cpp  VirtualGunstockDriverProvider.cpp
include/: PoseUpdateData.h
src/: IPCUtils.cpp  IPCUtils.h  VirtualDevice.cpp  VirtualDevice.h  VirtualGunstockDriverProvider.cpp  VirtualGunstockDriverProvider.h  driver_main.cpp
src/IPC/: CMakeLists.txt  GunstockConfigData.h  IPCUtils.cpp  IPCUtils.h  PoseUpdateData.h
src/client/: CMakeLists.txt  main.cpp
src/driver/: CMakeLists.txt  PoseUpdateData.h  VirtualDevice.cpp  VirtualDevice.h  VirtualGunstockDriverProvider.cpp  VirtualGunstockDriverProvider.h
